# cordyceps

./: .gitignore  README.md  pyproject.toml
examples/: analyze_codebase.py  basic_agent.py  swarm_decompose.py
examples/terminal_bench/: README.md  cordyceps_tb_agent.py  show_log.py
src/cordyceps/: __init__.py  agent.py  capability.py  channel.py  config.py  observability.py  usage.py
src/cordyceps/capabilities/: __init__.py  datastore.py  filesystem.py  shell.py  tools.py
src/cordyceps/engine/: __init__.py  loop.py  todo.py
src/cordyceps/execution/: __init__.py  inprocess.py
src/cordyceps/llm/: __init__.py  anthropic_client.py
src/cordyceps/orchestrator/: __init__.py  decomposer.py  swarm.py
tests/: test_engine.py  test_swarm.py
